Bug 387860 - linker and loss of data warnings with OriginProjectParser
Summary: linker and loss of data warnings with OriginProjectParser
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: backend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Stefan Gerlach
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-12-13 02:59 UTC by uwestoehr
Modified: 2018-01-21 13:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-12-13 02:59:41 UTC
I get:

3>C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(299): warning C4267: 'initializing': conversion from 'size_t' to 'int', possible loss of data
3>C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(299): warning C4267: 'initializing': conversion from 'size_t' to 'const int', possible loss of data
3>C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(597): warning C4267: 'initializing': conversion from 'size_t' to 'unsigned int', possible loss of data

and also:

3>ImportOpj.obj : warning LNK4006: "class QString __cdecl strreverse(class QString const &)" (?strreverse@@YA?AVQString@@AEBV1@@Z) already defined in OriginProjectParser.obj; second definition ignored
Comment 1 Alexander Semke 2017-12-14 22:33:08 UTC
Git commit 54afdc58f6a811843db8c94fcb2a173f0f356b17 by Alexander Semke.
Committed on 14/12/2017 at 22:31.
Pushed by asemke into branch 'master'.

1. fixed couple of uint to int conversions in OriginProjectParser
2. removed ImportObj class, the code is in OriginProjectParser now
FIXED-IN: 2.5

M  +0    -3    src/CMakeLists.txt
M  +8    -10   src/backend/datasources/projects/OriginProjectParser.cpp
M  +6    -6    src/backend/datasources/projects/OriginProjectParser.h
M  +0    -3    src/kdefrontend/MainWin.cpp
D  +0    -719  src/kdefrontend/datasources/ImportOpj.cpp
D  +0    -55   src/kdefrontend/datasources/ImportOpj.h

https://commits.kde.org/labplot/54afdc58f6a811843db8c94fcb2a173f0f356b17
Comment 2 uwestoehr 2017-12-14 23:26:42 UTC
Now I get these warnings:

1>C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(227): warning C4456: declaration of 'matrix' hides previous local declaration
1>  C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(224): note: see declaration of 'matrix'
1>C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(311): warning C4267: 'argument': conversion from 'size_t' to 'int', possible loss of data
1>C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(583): warning C4456: declaration of 'matrix' hides previous local declaration
1>  C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(579): note: see declaration of 'matrix'
Comment 3 Alexander Semke 2017-12-15 07:43:14 UTC
Git commit 0544f6c20e28ff84008e2c56821964db1a101c45 by Alexander Semke.
Committed on 15/12/2017 at 07:41.
Pushed by asemke into branch 'master'.

1. properly set the name of Origin matrix sheets during the import
2. fixed couple of warnings
Related: bug 387862
FIXED-IN:2.5

M  +6    -8    src/backend/datasources/projects/OriginProjectParser.cpp
M  +4    -7    src/backend/worksheet/plots/cartesian/CartesianPlot.cpp

https://commits.kde.org/labplot/0544f6c20e28ff84008e2c56821964db1a101c45
Comment 4 uwestoehr 2017-12-15 21:30:40 UTC
I am sorry to report that I now get now other warnings:

1>C:\CraftRoot\labplot\liborigin/OriginFile.h(80): warning C4625: 'OriginFile': copy constructor was implicitly defined as deleted
1>C:\CraftRoot\labplot\liborigin/OriginFile.h(80): warning C4626: 'OriginFile': assignment operator was implicitly defined as deleted
1>C:\CraftRoot\labplot\src\backend/datasources/projects/OriginProjectParser.h(69): warning C4625: 'OriginProjectParser': copy constructor was implicitly defined as deleted
1>C:\CraftRoot\labplot\src\backend/datasources/projects/OriginProjectParser.h(69): warning C5026: 'OriginProjectParser': move constructor was implicitly defined as deleted
1>C:\CraftRoot\labplot\src\backend/datasources/projects/OriginProjectParser.h(69): warning C4626: 'OriginProjectParser': assignment operator was implicitly defined as deleted
1>C:\CraftRoot\labplot\src\backend/datasources/projects/OriginProjectParser.h(69): warning C5027: 'OriginProjectParser': move assignment operator was implicitly defined as deleted
1>C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(367): warning C4365: 'argument': conversion from 'int' to 'unsigned __int64', signed/unsigned mismatch
1>C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(404): warning C4242: 'argument': conversion from 'int' to 'char', possible loss of data
1>C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(412): warning C4365: 'argument': conversion from 'int' to 'unsigned __int64', signed/unsigned mismatch
1>C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(452): warning C4365: 'argument': conversion from 'int' to 'unsigned __int64', signed/unsigned mismatch
1>C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(513): warning C4365: 'argument': conversion from 'int' to 'unsigned __int64', signed/unsigned mismatch
1>C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(534): warning C4365: 'argument': conversion from 'int' to 'unsigned __int64', signed/unsigned mismatch
1>C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(555): warning C4365: 'argument': conversion from 'int' to 'unsigned __int64', signed/unsigned mismatch
1>C:\CraftRoot\labplot\src\backend\datasources\projects\OriginProjectParser.cpp(613): warning C4365: 'argument': conversion from 'int' to 'unsigned __int64', signed/unsigned mismatch
Comment 5 uwestoehr 2017-12-15 21:46:40 UTC
Ah I get them because the last time I compiled with level 4 and now with /Wall. However the mismatch warnings should be fixes in my opinion.