1. fixed couple of uint to int conversions in OriginProjectParser 2. removed ImportObj class, the code is in OriginProjectParser now

BUG: 387860
FIXED-IN: 2.5